# kimi-cli-simplify

./: .env.example  .gitignore  QUICK_START.md  README.md  SECURITY_FIX.md  check_security.py  pyproject.toml
examples/: error_handling_demo.py
kimi_cli_simplify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
kimi_simplify/: __init__.py  compaction.py  config.py  errors.py  llm.py  main.py  retry.py
kimi_simplify/soul/: __init__.py  agent.py  kimisoul.py
kimi_simplify/tools/: __init__.py  builtins.py  executor.py
kimi_simplify/utils/: __init__.py
tests/: README.md  run_tests.py  test_integration.py  test_llm.py  test_soul.py  test_tools.py
